--- a/404.html
+++ b/404.html
@@ -65,7 +65,6 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
@@ -77,8 +76,6 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
@@ -106,7 +103,6 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
@@ -118,8 +114,6 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
@@ -139,8 +133,8 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-b892" data-image-width="597" data-image-height="137">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-text u-text-default u-text-white u-text-1">Страница не найдена!</h1>
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h1 class="u-text u-text-default u-text-white u-text-1">фор байден</h1>
         <p class="u-text u-text-default u-text-white u-text-2">Страницы нет, либо она еще в разработке.<br>Файл образа в облаке может быть не готов, через меньше чем неделю, вариант загрузки появится!
         </p>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-1">Сборки Windows 8.1</a>
