--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -67,7 +67,6 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
@@ -79,8 +78,6 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
@@ -108,7 +105,6 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
@@ -120,8 +116,6 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
@@ -141,7 +135,7 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-hidden-xs u-image u-section-1" id="sec-782f" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-white u-text-1">Сборки Windows 7</h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 Ultimate V6 by Adderly (19.10.2022)<br>
         </h6>
@@ -151,45 +145,22 @@
         <img class="u-expanded-width-xs u-image u-image-default u-image-4" src="images/2022-08-14130414.png" alt="" data-image-width="447" data-image-height="211">
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows7x64-2022-10-10-12-33-29.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows7x64-2022-10-10-12-33-15.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-align-center-lg u-align-center-md u-text u-text-white u-text-3"> Обновления на октябрь 2022 год. (Service Pack 1)&nbsp;<br>Включая платные обновления с продленной поддержкой до 2023 года.<br>Продлены сертификаты до 2050х годов.<br>После обновления Windows - будет слетать патч тем, он есть в папке, либо его можно скачать ниже.<br>
-          <br>Добавлена папка "от Марка Аддерли" в которой находится активатор, и инсталяторы самых нужных и авторских программ <br>
-          <br>Интегрированы Framework 4.8, 4.7.2, 3.5<br>
-          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
-          <br>Добавлены темы Windows 8.1, и 10 (по желанию можно удалить)&nbsp;<br>Добавлены темы с обоями Windows Vista, 11<br>
-          <br>Отключены гаджеты&nbsp;(по желанию можно вернуть)&nbsp;<br>
+        <p class="u-align-center-lg u-align-center-md u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, чтобы отключать и включать обновления, и многое другое.<br>
+          <br>Последние обновления.<br>Продлены сертификаты до 2050х годов.<br>После обновления Windows - будет слетать патч тем, он есть в папке, либо его можно скачать ниже.<br>
+          <br> Интеграции: <br>Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
+          <br>Добавлены темы Windows 8.1, и 10<br>Добавлены темы с обоями Windows Vista, 11<br>(по желанию можно удалить)&nbsp;<br>
+          <br>Отключены гаджеты<br>(по желанию можно вернуть)&nbsp;<br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br>
           <br>Образ весит 6.85 GB, после установки Windows занимает 16.4 GB. <br>
           <br>Образ основан на официальном MSDN Windows 7.<br>
           <br>Чтобы работали темы в сборке, нужно докачать патчер ниже.
         </p>
-        <a href="https://drive.google.com/file/d/12O6iCwCWXKQ3IpHc8E4DFkPGBZumUcKq/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V6 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/r0dxu173t2ly26s/Windows+7+V6+by+Adderly.iso/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 7 Ultimate V6 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/bUJxDLQS#cneoga-pVOidOCgDHEFv27b9MOQ-MUe3dZ7kEYVQckA" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-3" target="_blank"> Скачать Windows 7 Ultimate V6 by Adderly [MEGA.NZ]</a>
-        <a href="https://www.mediafire.com/file/t78spt68gorstmd/UniversalThemePatcher.exe/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-4" target="_blank">Скачать Universal Theme Patcher для тем Windows 7</a>
-        <h6 class="u-text u-text-white u-text-4">Windows 7 Ultimate V3.1 by Adderly (27.07.2022)<br>
-        </h6>
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-7" src="images/Windows7x64-2022-07-27-01-29-34.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-8" src="images/Windows7x64-2022-07-27-01-22-30.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-9" src="images/Windows7x64-2022-07-27-01-26-11.png" alt="" data-image-width="544" data-image-height="314">
-        <p class="u-text u-text-white u-text-5"> Обновления на 2011 год. (Service Pack 1) <br>
-          <br>Добавлен активатор.<br>
-          <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ <br>
-          <br>Интегрированы Framework 4.8<br>
-          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64&nbsp;<br>
-          <br>Добавлены темы с обоями Windows Vista, 11, 8.0<br>
-          <br>Отключены игры <br>Отключён Internet Explorer <br>Отключены компоненты для работы с мультимедиа "Media Center, Media Player"&nbsp;<br>Отключены компоненты планшетного пк<br>Отключены гаджеты <br>(по желанию можно вернуть) <br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br>
-          <br>Образ весит 4.33 GB, после установки Windows занимает 14.5 GB. <br>
-          <br>Образ основан на официальном MSDN Windows 7.<br>
-          <br>В отличии от 4 версии, нет никаких тем.
-        </p>
-        <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-5" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/kdq8r0e6tqwxfr4/Windows+7+V3.1+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-6" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/648AwQCI#xZ2as5DflG2oDxriVGRpz-soLWP3EJIkoPjcd12s4rg" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-7" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [MEGA.NZ]</a>
-        <p class="u-text u-text-default u-text-white u-text-6">Смотрите так же:</p>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-8">Сборки Windows 8.1</a>
-        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-9">Сборки Windows 8.0</a>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-10">Сборки Windows 10</a>
+        <a href="https://drive.google.com/file/d/12O6iCwCWXKQ3IpHc8E4DFkPGBZumUcKq/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V6 by Adderly [Временно недоступен]</a>
+        <a href="https://www.mediafire.com/file/t78spt68gorstmd/UniversalThemePatcher.exe/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank">Скачать Universal Theme Patcher для тем Windows 7</a>
+        <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 8.1</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.0</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 10</a>
       </div>
     </section>
     <section class="u-align-center-xs u-black u-clearfix u-hidden-lg u-hidden-md u-hidden-sm u-hidden-xl u-section-2" id="sec-6956">
