--- a/Windows-8-1-сборки.html
+++ b/Windows-8-1-сборки.html
@@ -67,7 +67,6 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
@@ -79,8 +78,6 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
@@ -108,7 +105,6 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
@@ -120,8 +116,6 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
@@ -141,7 +135,7 @@
         </nav>
       </div></header>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-xs u-image u-section-1" id="sec-b057" data-image-width="3840" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-body-alt-color u-text-1">Сборки Windows 8.1</h1>
         <h6 class="u-text u-text-body-alt-color u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2">Windows 8.1 Pro V6 by Adderly (09.10.2022)<br>
         </h6>
@@ -149,26 +143,20 @@
         <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows8.1-2022-10-09-13-21-00.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows8.1-2022-10-09-14-25-43.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows8.1-2022-10-09-13-21-59.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-align-center-xl u-text u-text-body-alt-color u-text-3"> Сборка обновлена до Update 3&nbsp;<br>
-          <br>Добавлена папка "от Марка Аддерли" в которой находится активатор, и инсталяторы самых нужных и авторских программ<br>
-          <br>Интегрирован Framework 4.8, 4.7.2, 3.0, 2.0<br>
-          <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022. x86 и, x64&nbsp;<br>
+        <p class="u-align-center-xl u-text u-text-body-alt-color u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же Reg файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
+          <br> Интеграции: <br>Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
           <br>Включен DirectPLay<br>
-          <br>Добавлены темы "Архитектура, Персонажи, Ландшафт" из Windows 7 <br>
-          <br>Добавлены темы с обоями рабочего стола из Windows Vista, 7, 8.0, 10, 11<br>
-          <br>Добавлены темы с обоями из экрана блокировки Windows 8 и Windows 10 <br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
+          <br>Добавлены темы "Архитектура, Персонажи, Ландшафт" из Windows 7 <br>Добавлены темы с обоями рабочего стола из Windows Vista, 7, 8.0, 10, 11<br>Добавлены темы с обоями из экрана блокировки Windows 8 и Windows 10 <br> (по желанию можно удалить)<br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу<br>(по желанию можно отключить)<br>
           <br>Ключ - GCRJD-8NW9H-F2CDX-CCM8D-9D6T9 <br>
           <br>Образ весит 5.00 GB, после установки Windows занимает 15.8 GB. <br>
-          <br>Образ основан на официальном MSDN Windows 8.1.<br>
+          <br>Образ основан на официальном MSDN Windows 8.1 с Update 3.<br>
         </p>
-        <a href="https://drive.google.com/file/d/1vKHTNIar1WejBxqDJHU2jK0FTfzgnO9R/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-14 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.1 Pro V6 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/x20fmtj2a3df3ie/Windows+8.1+V6+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank">Скачать Windows 8.1 Pro V6 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/cvZWRC5D#IyfUATtLKd9KnqN1BdAg49JTik3WoEtefszVWGRUXYg" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-21 u-radius-50 u-btn-3" target="_blank">Скачать Windows 8.1 Pro V6 by Adderly [MEGA.NZ]</a>
-        <p class="u-text u-text-body-alt-color u-text-default u-text-4">Смотрите так же:</p>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 10</a>
-        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.0</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 7</a>
+        <a href="https://drive.google.com/file/d/1vKHTNIar1WejBxqDJHU2jK0FTfzgnO9R/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-14 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.1 Pro V6 by Adderly [Временно недоступен]</a>
+        <p class="u-text u-text-body-alt-color u-text-4">Смотрите так же:</p>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-2">Сборки Windows 10</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 8.0</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 7</a>
       </div>
     </section>
     <section class="u-align-center-xs u-black u-clearfix u-hidden-lg u-hidden-md u-hidden-sm u-hidden-xl u-section-2" id="sec-d5d6">
