--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -67,7 +67,6 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
@@ -79,8 +78,6 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
@@ -108,7 +105,6 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
@@ -120,8 +116,6 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
@@ -150,55 +144,42 @@
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows10x64-2022-10-15-15-58-15.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-3" src="images/2022-08-14214127.png" alt="" data-image-width="495" data-image-height="263">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-4" src="images/2022-08-14214424.png" alt="" data-image-width="603" data-image-height="340">
-        <p class="u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
+        <p class="u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же Reg файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены приложения "Люди, Почта, One Note, Камера" <br>
-          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
-          <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
-          <br>Включён DirectPlay&nbsp;<br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу
- (по желанию можно выключить)<br>
+          <br>Интеграции:<br>Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>Framework 4.8, 4.7.2, 3.5, 3.0, 2.0 <br>
+          <br>Включён DirectPlay&nbsp; <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br> (по желанию можно выключить) <br>
           <br>Образ весит 6.1 GB, после установки Windows занимает 21.6 GB (стандартная 21H2 занимает 24 GB) <br>
           <br>Образ основан на официальном MSDN Windows 10 21H2 (19044.1288)<br>
         </p>
-        <a href="https://drive.google.com/file/d/1SSqfGqQVGiFPibwDvBaNdA7NkHT9gmep/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro V3 21H2 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/uq8b7eowhg07zvm/Windows+10+21H2+V3+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro V3 21H2 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/vN5nDabZ#CRhwjA_rJfU4oU5VtcTrmsVNd2pkDvfN-F7WdniG1bM" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-3" target="_blank">Скачать Windows 10 Pro V3 21H2 by Adderly [MEGA.NZ]</a>
-        <h6 class="u-text u-text-default u-text-white u-text-4">Windows 10 Pro V3 1709 by Adderly (15.10.2022)</h6>
+        <a href="https://drive.google.com/file/d/1G7aiJvLti-idoY1ydQPWCiyUkMQWbB3G/view?usp=share_link" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro V3 21H2 by Adderly</a>
+        <h6 class="u-text u-text-white u-text-4">Windows 10 Pro V3 1709 by Adderly (15.10.2022)</h6>
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-5" src="images/Windows10x64-2022-10-15-19-45-20.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-6" src="images/Windows10x64-2022-10-15-19-45-52.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-7" src="images/2022-08-15152355.png" alt="" data-image-width="589" data-image-height="264">
-        <p class="u-text u-text-default-xl u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления.&nbsp;<br>
+        <p class="u-text u-text-default-xl u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же Reg файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br> Удалены приложения "​Камера, Почта, One Note, Windows Photos, Windows Sound Recorder, Get Started, People , Xbox, Windows Store" <br>
-          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
-          <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
-          <br>Включён DirectPlay&nbsp;<br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно выключить)<br>
+          <br> Интеграции: <br>Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
+          <br>Включён DirectPlay&nbsp;<br>Добавлен диспетчер задач в ПКМ по рабочему столу<br>(по желанию можно выключить)<br>
           <br>Образ весит 5.00 GB, после установки Windows занимает 11 GB <br>
           <br>Образ основан на официальном MSDN Windows 10 1709 (Fall Creators Update)<br>
         </p>
-        <a href="https://drive.google.com/file/d/1SFUNTdhc4DHmYd_KzztEqVaCYc428vjY/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-4" target="_blank">Скачать Windows 10 Pro V3 1709 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/bgur56u7b9ofl4d/Windows+10+1709+V3+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-5" target="_blank">Скачать Windows 10 Pro V3 1709 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/r1ckQQJY#uKh8_CyvS05eLjVgVsSpvhBGoJCy0Jitj-k_-scRaqg" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-6" target="_blank">Скачать Windows 10 Pro V3 1709 by Adderly [MEGA.NZ]</a>
-        <h6 class="u-text u-text-default u-text-white u-text-6">Windows 10 Pro 1607 V2 by Adderly (19.08.2022)</h6>
+        <a href="https://drive.google.com/file/d/1SFUNTdhc4DHmYd_KzztEqVaCYc428vjY/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro V3 1709 by Adderly [Временно недоступен]</a>
+        <h6 class="u-text u-text-white u-text-6">Windows 10 Pro 1607 V2 by Adderly (19.08.2022)</h6>
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-8" src="images/Windows101607V2byAdderly-2022-08-19-22-05-30.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-9" src="images/Windows101607V2byAdderly-2022-08-19-22-06-49.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-10" src="images/Windows101607V2byAdderly-2022-08-19-22-07-32.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-text u-text-white u-text-7"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
+        <p class="u-text u-text-white u-text-7"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же Reg файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены все UWP приложения, кроме калькулятора, часов, и фотографий <br>
-          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
-          <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
-          <br>Включён DirectPlay <br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно выключить)<br>
+          <br> Интеграции: <br>Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
+          <br>Включён DirectPlay <br>Добавлен диспетчер задач в ПКМ по рабочему столу<br>(по желанию можно выключить)<br>
           <br>Образ весит 4.68 GB, после установки Windows занимает 12.4 GB <br>
           <br>Образ основан на официальном MSDN Windows 10 1607 (Anniversary Update)
         </p>
-        <a href="https://drive.google.com/file/d/1yMncHe1nWKiZ9jmo8y1SIAnjviEOYwX4/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-7" target="_blank">Скачать Windows 10 Pro 1607 V2 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/vhawrathcazywb3/Windows_10_1607_V2_by_Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-8" target="_blank">Скачать Windows 10 Pro 1607 V2 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/31lUHKQJ#yr0IwRdlO0cWbAIyMpJL-0wIgdSEcwtliacTM-DGsOs" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-9" target="_blank">Скачать Windows 10 Pro 1607 V2 by Adderly [MEGA.NZ]</a>
-        <p class="u-text u-text-default u-text-white u-text-8">Смотрите так же:</p>
-        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-10">Сборки Windows 11</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-11">Сборки Windows 8.1</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-12">Сборки Windows 7</a>
+        <a href="https://drive.google.com/file/d/1yMncHe1nWKiZ9jmo8y1SIAnjviEOYwX4/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-3" target="_blank">Скачать Windows 10 Pro 1607 V2 by Adderly [Временно недоступен]</a>
+        <p class="u-text u-text-white u-text-8">Смотрите так же:</p>
+        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 11</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 7</a>
       </div>
     </section>
     <section class="u-align-center-xs u-black u-clearfix u-hidden-lg u-hidden-md u-hidden-sm u-hidden-xl u-section-2" id="sec-1178">
