--- a/Windows-11-сборки.html
+++ b/Windows-11-сборки.html
@@ -67,7 +67,6 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
@@ -79,8 +78,6 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
@@ -108,7 +105,6 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
@@ -120,8 +116,6 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
@@ -150,42 +144,35 @@
         <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows11-2022-10-10-18-07-29.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/2022-08-15212113.png" alt="" data-image-width="545" data-image-height="293">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-4" src="images/2022-08-15211852.png" alt="" data-image-width="815" data-image-height="373">
-        <p class="u-align-center-xl u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ,<br>а так же рег файлы, чтобы вернуть старый просмотрщик фото и&nbsp;чтобы отключать и включать обновления.&nbsp;<br>
+        <p class="u-align-center-xl u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же Reg файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены приложения "Почта, Люди, One Note, Get Started, Камера"<br>
-          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64<br>
-          <br>Интегрированы Framework 4.8, 4.7.2<br>
+          <br> Интеграции: <br>Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64<br>
           <br>Включён DirectPlay<br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно выключить)<br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу<br>(по желанию можно выключить)<br>
           <br>Образ весит 6.28 GB, после установки Windows занимает 20.1 GB<br>
-          <br>Образ основан на официальном MSDN Windows 11 v2 22H2 (22621.382)<br>Инсталятор использован от моей предыдущей сборки 22000.194, дабы не было проверки!<br>Проверка отключена в этой сборке, и смотреть как обходить проверку на моей сборке вам не потребуется!)<br>
+          <br>Образ основан на официальном MSDN Windows 11 v2 22H2 (22621.382)<br>Инсталятор использован от моей предыдущей сборки 22000.194, дабы не было проверки!<br>Проверка отключена в этой сборке, и смотреть как обходить проверку на моей сборке вам не потребуется!<br>
         </p>
-        <a href="https://drive.google.com/file/d/1tQn1BGH4YLQtL0uxlLwgH-OhHWwju2v6/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать ​Windows 11 Pro V2 22H2 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/5yfa8w3d8q7poc8/Windows+11+V2+22H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank"> Скачать ​Windows 11 Pro V2 22H2 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/mBJFjYCa#nbC5GIE9H-6CiKPD2RRLdKbEVqYht-vXFGaj1OefVbU" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-29 u-radius-50 u-btn-3" target="_blank"> Скачать Windows 11 Pro V2 22H2 by Adderly [MEGA.NZ]</a>
-        <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-4">Как обойти проверку Windows 11</a>
+        <a href="https://drive.google.com/file/d/1bu4QBuol3D_iQvFdyY0ZrFqaXsmOWTzO/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать ​Windows 11 Pro V2 22H2 by Adderly</a>
+        <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-2">Как обойти проверку Windows 11</a>
         <h6 class="u-text u-text-default u-text-white u-text-4">Windows 11 Pro V3 21H2 by Adderly (15.08.2022)<br>
         </h6>
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows11byAdderly-2022-08-15-21-31-17.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows11byAdderly-2022-08-15-21-30-26.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-7" src="images/2022-08-15212113.png" alt="" data-image-width="545" data-image-height="293">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-8" src="images/2022-08-15211852.png" alt="" data-image-width="815" data-image-height="373">
-        <p class="u-align-center-xl u-text u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ,<br>а так же рег файлы, чтобы вернуть старый просмотрщик фото и&nbsp;чтобы отключать и включать обновления.&nbsp;<br>
+        <p class="u-align-center-xl u-text u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же Reg файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены приложения "Почта, Люди, One Note, Get Started, Камера"<br>
-          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
-          <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
+          <br> Интеграции: <br>Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
           <br>Включён DirectPlay <br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно выключить)<br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу<br>(по желанию можно выключить)<br>
           <br>Образ весит 6.23 GB, после установки Windows занимает 21 GB<br>
-          <br>Образ основан на официальном MSDN Windows 11 21H2 (22000.194)<br>(Основана на старой, чтобы вы обновились сами. Сделано это для того, чтобы работали параметры реестра для того, чтобы обойти проверку.)<br>Проверка отключена в этой сборке, и смотреть как обходить проверку на моей сборке вам не потребуется!)<br>
+          <br>Образ основан на официальном MSDN Windows 11 21H2 (22000.194)<br>(Основана на старой, чтобы вы обновились сами. Сделано это для того, чтобы работали параметры реестра для того, чтобы обойти проверку.)<br>Проверка отключена в этой сборке, и смотреть как обходить проверку на моей сборке вам не потребуется!<br>
         </p>
-        <a href="https://drive.google.com/file/d/1nXIKyTFP3iapDrB4KXNSchoWY42jVL3S/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-5" target="_blank">Скачать Windows 11 Pro V3 21H2 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/jtw0kmrt8dgi44q/Windows+11+V3+21H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-6" target="_blank"> Скачать Windows 11 Pro V3 21H2 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/M5YzXDrL#0UqRQNv_qTs4fREYjUtjN3QllGsIT45nTdJKRlEEHoU" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-29 u-radius-50 u-btn-7" target="_blank"> Скачать Windows 11 Pro V3 21H2 by Adderly [MEGA.NZ]</a>
-        <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-8">Как обойти проверку Windows 11</a>
-        <p class="u-text u-text-default u-text-white u-text-6">Смотрите так же:</p>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-9">Сборки Windows 10</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-10">Сборки Windows 8.1</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-11">Сборки Windows 7</a>
+        <a href="https://drive.google.com/file/d/1mt8Ok9e_nFTS9ox_JHTXMOM5vxrFlhn5/view?usp=share_link" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-3" target="_blank">Скачать Windows 11 Pro V3 21H2 by Adderly</a>
+        <p class="u-text u-text-white u-text-6">Смотрите так же:</p>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 7</a>
       </div>
     </section>
     <section class="u-align-center-xs u-black u-clearfix u-hidden-lg u-hidden-md u-hidden-sm u-hidden-xl u-section-2" id="sec-29e3">
