--- a/Windows-Lite-x32-сборки.html
+++ b/Windows-Lite-x32-сборки.html
@@ -67,7 +67,6 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
@@ -79,8 +78,6 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
@@ -108,7 +105,6 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
@@ -120,8 +116,6 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
@@ -148,26 +142,22 @@
         <img class="u-align-center u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows102-2022-11-05-17-44-58.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows102-2022-11-05-17-45-18.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-text u-text-default-xl u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся папки с браузерами, и т.д. (спец содержимое)<br>
-          <br> Удалены Skype, Wordpad, PDF Reader <br>Удалены почти все шрифты <br>Удален NTVDM <br>Удалена поддержка Dolby Atmos <br>Удалены все языки кроме Русского и Украинского <br>Удалены Screensaverы <br>Удален игровой проводник <br>Удалена голосовая поддержка <br>Удалена Tablet PC <br>Удален Ease Transfer<br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
+          <br> Удалены Skype, Wordpad, PDF Reader <br>Удалены почти все шрифты <br>Удален NTVDM <br>Удалена поддержка Dolby Atmos <br>Удалены все языки кроме Русского, Украинского, и Английского<br>Удалены Screensaverы <br>Удален игровой проводник <br>Удалена голосовая поддержка <br>Удалена Tablet PC <br>Удален Ease Transfer<br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу<br>(по желанию можно отключить)<br>
           <br>Образ весит 2.8 GB, после установки Windows 5.8 GB. <br>
           <br>Поддерживает максимум 3 ГБ ОЗУ, как и остальные 32 ​разрядные Windows.
         </p>
-        <a href="https://drive.google.com/file/d/12YDXjD_QJHP0Lc2humKoIug2T4LG_QD8/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 LTSB Lite by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/i90jkeuoal6r2j4/Windows+10+LTSB+Lite+x32+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows ​​10 LTSB  Lite by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/knhGiLJI#oExh4r0mF8llRe7wI13NqVaNCi02IwosbB1JPXaR9aM" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-3" target="_blank"> Скачать Windows ​10 LTSB Lite by Adderly [MEGA.NZ]</a>
+        <a href="https://drive.google.com/file/d/12YDXjD_QJHP0Lc2humKoIug2T4LG_QD8/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 LTSB Lite by Adderly [Временно недоступен]</a>
         <h6 class="u-text u-text-white u-text-4">Windows 7 HomePrem Lite x86 V2 by Adderly (20.11.2022)</h6>
         <img class="u-align-center u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows7-2022-10-26-23-20-43.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-4" src="images/Windows7-2022-10-26-23-21-34.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-text u-text-default u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся папки с браузерами, и т.д. (спец содержимое)<br>
-          <br> Удален WordPad <br>Удален DVD Maker <br>Удален Easy Transfer <br>Удалены все языки, кроме английского, русского, украинского <br>Удалена Голосовая поддержка <br>Удален Кеш и временные файлы <br>Удален Windows Defender <br>Удалены гаджеты<br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
+          <br> Удален WordPad <br>Удален DVD Maker <br>Удален Easy Transfer <br>Удалены все языки, кроме ​Русского, Украинского, и Английского<br>Удалена Голосовая поддержка <br>Удален Кеш и временные файлы <br>Удален Windows Defender <br>Удалены гаджеты<br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу<br>(по желанию можно отключить)<br>
           <br>Образ весит 1.88 GB, после установки Windows 6 GB. <br>
           <br>Поддерживает максимум 3 ГБ ОЗУ, как и остальные 32 ​разрядные Windows.
         </p>
-        <a href="https://drive.google.com/file/d/1MsLuZJPYW_gycuoCRHPvx4N0CMddWecw/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-4" target="_blank">Скачать Windows 7 HomePrem Lite V2 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/2heofs2b69jnxdq/Windows+7+Lite+x32+V2+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-5" target="_blank"> Скачать Windows ​7 HomePrem Lite V2 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/9rYkFCLa#JRyMhdhBNyEofIQ1-M_uY-uXSC0HUrqmbxtdoFuLAns" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-6" target="_blank"> Скачать Windows ​7 HomePrem Lite V2 by Adderly [MEGA.NZ]</a>
+        <a href="https://drive.google.com/file/d/1MsLuZJPYW_gycuoCRHPvx4N0CMddWecw/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank">Скачать Windows 7 HomePrem Lite V2 by Adderly [Временно недоступен]</a>
         <h6 class="u-text u-text-white u-text-6">Windows 8.1 Pro Lite x86 by Adderly (26.06.2022)</h6>
         <img class="u-align-center u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows8.x-2022-06-26-23-17-13.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-image-6" src="images/Windows8.x-2022-06-26-23-18-14.png" alt="" data-image-width="1366" data-image-height="768">
@@ -177,18 +167,16 @@
         <img class="u-image u-image-default u-preserve-proportions u-image-10" src="images/Windows8.x-2022-06-26-23-18-29.png" alt="" data-image-width="465" data-image-height="256">
         <p class="u-text u-text-default u-text-white u-text-7"> Добавлена папка "от Марка Аддерли", в которой находится инсталятор Google Chrome, и некоторые другие папки.<br>
           <br>Удалены приложения<br>"Финансы, Еда и напитки, Здоровье и фитнесс, Карты, Новости,<br>Спорт, Путешествия, Погода, Помощь и подсказки, Ридер, Скайп, Будильник,<br>Запись звука, Xbox Live Games, Zune, Сканер, Почта, Люди, XBOX Live Games, UWP Калькулятор"&nbsp;<br>
-          <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013 x86<br>
+          <br>Интегрированны Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013 x86<br>
           <br>Включен DirectPLay<br>&nbsp;<br>Отключен Internet Explorer<br>Отключен Media Player<br>(по желанию можно вернуть)<br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
           <br>Ключ - GCRJD-8NW9H-F2CDX-CCM8D-9D6T9&nbsp;<br>
           <br>Образ весит 2.97 GB, после установки Windows занимает 8.88 GB. <br>
           <br>Поддерживает максимум 3 ГБ ОЗУ, как и остальные 32 разрядные Windows.
         </p>
-        <a href="https://drive.google.com/file/d/1owQwO251ocPBcWqpA05mkpB4g39rp7Nk/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-7" target="_blank">Скачать Windows 8.1 Pro Lite by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/0ynqo6eppqv0sxw/Windows+8.1+Lite+x32+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-8" target="_blank"> Скачать Windows 8.1 Pro Lite by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/ImZzWDhA#YoeooKNXBB5khh7DGuGCdf6Ky8VL487R0XmKw1EkgE8" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-9" target="_blank"> Скачать Windows 8.1 Pro Lite by Adderly [MEGA.NZ]</a>
-        <p class="u-text u-text-default u-text-white u-text-8">Смотрите так же:</p>
-        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-10">Сборки Windows Lite</a>
+        <a href="https://drive.google.com/file/d/1owQwO251ocPBcWqpA05mkpB4g39rp7Nk/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-3" target="_blank">Скачать Windows 8.1 Pro Lite by Adderly [Временно недоступен]</a>
+        <p class="u-text u-text-white u-text-8">Смотрите так же:</p>
+        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows Lite</a>
       </div>
     </section>
     <section class="u-align-center-xs u-black u-clearfix u-hidden-lg u-hidden-md u-hidden-sm u-hidden-xl u-section-2" id="sec-c5ab">
